2007-12-17  Ben Abbott  <bpabbott@mac.com>

         * miscellaneous/run.m: Replace script with f when looking for
	 file to run.

2007-12-17  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_axes__.m: Use "set pm3d explicit" so that
	contours can overlay pcolor plots. Priveldge no hidden line
	removal when there are multiple objects in the plot.

2007-12-14  David Bateman  <dbateman@free.fr>

	* plot/contour3.m, plot/__contour__.m: Handle linespec.
	* plot/contour.m: Doc fix.
	* plot/__go_draw_axes__.m (case "patch"): Include "lt" in lt string.
	Include linetype in withclause.

	* plot/__go_draw_axes__.m (__calc_dimensions__): New function.
	Use it to determine dimensions.  Consolidate all 3-d settings.

2007-12-13  John W. Eaton  <jwe@octave.org>

	* image/imshow.m: Turn axis visibility off.
	Don't scale true color images.
	* image/image.m: Set axis layer property to "top".

2007-12-12  John W. Eaton  <jwe@octave.org>

	* image/loadimage.m: Avoid calling eval.  Avoid calling exist.

	* plot/pie.m: Avoid calling "exist".

	* linear-algebra/condest.m: Use nargin instead of size(varargin,2).	
	Condense argument processing logic.  Allow 6 arguments.
	Use issquare.  Avoid calling "exist".

	* plot/__go_draw_axes__.m: Handle the axes layer property.

2007-12-12  David Bateman  <dbateman@free.fr>

	* plot/ellipsoid.m: Port from octave-forge, editing for style.
	* plot/Makefile.in (SOURCES): Add to the sources.

2007-12-11  John W. Eaton  <jwe@octave.org>

	* plot/surf.m: Set xgrid, ygrid, and zgrid on here.
	* plot/surface.m: Not here.

	* plot/__go_draw_axes__.m: Always use "set grid front".  Send a
	subsequent "unset grid" if there is no grid.

	* plot/__go_draw_axes__.m: Include "front" in "set label" options.

	* plot/surface.m: Don't set facecolor property in call to
	__go_surface__.

	* plot/__plt2vs__.m, plot/__plt2sv__.m: New functions.
	* plot/__plt2__.m: Handle scalar-vector and vector-scalar cases.

2007-12-11  Kai Habel  <kai.habel@gmx.de>
